docs: better swaggo in class
